feat: restore encrypted snapshots from server
